@@ -1,3 +1,13 @@
+2009-03-08	IGNF <didier.richard@ign.fr>
+
+	* src/PJ_gstmerc.c: Correction of a bug in inv() function :
+	the projected origin coordinates where descaled.
+
+	* nad/testIGNF: Add a comment on the mandatory existance of the world grid
+	in order to make the test.
+
+	* ChangeLog: this comments
+
 2009-01-26  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/*.c: Remove SCCSID and lint stuff from all source files.
